# yogi-framework

./: .clang-format  .editorconfig  .gitignore  README.md  cli.py  requirements.txt
.github/: gcc_problem_matcher.json  gtest_problem_matcher.json
.github/workflows/: continuous_integration.yml
codegen/: __main__.py  common.py  core_api.yaml  gen_yogi_core.py  gen_yogi_core_mock.py  gen_yogi_cpp.py  gen_yogi_dotnet.py  gen_yogi_python.py
yogi-core/: CMakeLists.txt  conanfile.py
yogi-core-mock/: CMakeLists.txt  conanfile.py
yogi-core-mock/include/: yogi_core_mock.h
yogi-core-mock/src/: default_functions.h  yogi_core_mock.cc  yogi_core_mock.h
yogi-core/include/: .clang-format  yogi_core.h  yogi_core.h.jinja2
yogi-core/src/: config.h
yogi-core/src/api/: constants.cc  constants.h  errors.cc  errors.h  object.cc  object.h  version.cc  version.h
yogi-core/src/data/: base64.cc  base64.h  buffer.h  crypto.cc  crypto.h  ringbuffer.cc  ringbuffer.h
yogi-core/src/lib/: lib_branch.cc  lib_configuration.cc  lib_context.cc  lib_helpers.cc  lib_helpers.h  lib_logging.cc  lib_objects.cc  lib_signals.cc  lib_time.cc  lib_utilities.cc  lib_web.cc
yogi-core/src/network/: messages.cc  messages.h  msg_transport.cc  msg_transport.h  serialize.h  tcp_listener.cc  tcp_listener.h  tcp_transport.cc  tcp_transport.h  transport.cc  transport.h
yogi-core/src/objects/: branch.cc  branch.h  configuration.cc  configuration.h  context.cc  context.h  logger.cc  logger.h  signal_set.cc  signal_set.h  timer.cc  timer.h
yogi-core/src/objects/branch/: advertising_receiver.cc  advertising_receiver.h  advertising_sender.cc  advertising_sender.h  branch_connection.cc  branch_connection.h  branch_info.cc  branch_info.h  broadcast_manager.cc  broadcast_manager.h  connection_manager.cc  connection_manager.h
yogi-core/src/objects/configuration/: cmdline_parser.cc  cmdline_parser.h
yogi-core/src/objects/logger/: console_log_sink.h  file_log_sink.h  hook_log_sink.h  log_user.h  text_based_log_sink.h
yogi-core/src/schemas/: branch_config.schema.json  branch_event.schema.json  branch_properties.schema.json  local_branch_info.schema.json  remote_branch_info.schema.json  schemas.cc  schemas.h
yogi-core/src/system/: console.cc  console.h  glob.cc  glob.h  network_info.cc  network_info.h  process.cc  process.h
yogi-core/src/util/: algorithm.h  bind.h  hex.h  json_helpers.cc  json_helpers.h  time.cc  time.h
yogi-core/test/: common.cc  common.h
yogi-core/test/api/: constants_test.cc  errors_test.cc  object_test.cc  version_test.cc
yogi-core/test/data/: base64_test.cc  crypto_test.cc  ringbuffer_test.cc
yogi-core/test/network/: messages_test.cc  msg_transport_test.cc  serialize_test.cc  tcp_listener_test.cc  tcp_transport_test.cc  transport_test.cc
yogi-core/test/objects/: branch_test.cc  configuration_test.cc  context_test.cc  logger_test.cc  signal_set_test.cc  timer_test.cc
yogi-core/test/objects/branch/: broadcast_manager_test.cc  connection_manager_test.cc
yogi-core/test/objects/configuration/: cmdline_parser_test.cc
yogi-core/test/schemas/: schemas_test.cc
yogi-core/test/system/: console_test.cc  glob_test.cc  network_info_test.cc  process_test.cc
yogi-core/test/util/: algorithm_test.cc  bind_test.cc  hex_test.cc  time_test.cc
yogi-cpp/: CMakeLists.txt  conanfile.py
yogi-cpp/include/: yogi.h
yogi-cpp/include/yogi/: branch.h  buffer.h  configuration.h  constants.h  context.h  duration.h  enums.h  errors.h  io.h  json.h  json_view.h  logging.h  msgpack_view.h  object.h  operation_id.h  payload_view.h  schemas.h  signals.h  string_view.h  timer.h  timestamp.h  uuid.h  version.h
yogi-cpp/include/yogi/detail/: api.h  error_helpers.h  library.h  library_impl_unix.h  library_impl_win.h  macros.h  query_string.h  sfinae.h
yogi-cpp/test/: common.cc  common.h  yogi_test.cc
yogi-cpp/test/yogi/: branch_test.cc  configuration_test.cc  constants_test.cc  context_test.cc  duration_test.cc  enums_test.cc  errors_test.cc  io_test.cc  json_test.cc  json_view_test.cc  logging_test.cc  msgpack_view_test.cc  object_test.cc  operation_id_test.cc  payload_view_test.cc  schemas_test.cc  signals_test.cc  string_view_test.cc  timer_test.cc  timestamp_test.cc  uuid_test.cc  version_test.cc
yogi-cpp/test/yogi_inc/: branch_inc_test.cc  buffer_inc_test.cc  configuration_inc_test.cc  constants_inc_test.cc  context_inc_test.cc  duration_inc_test.cc  enums_inc_test.cc  errors_inc_test.cc  io_inc_test.cc  json_inc_test.cc  json_view_inc_test.cc  logging_inc_test.cc  msgpack_view_inc_test.cc  object_inc_test.cc  operation_id_inc_test.cc  payload_view_inc_test.cc  schemas_inc_test.cc  signals_inc_test.cc  string_view_inc_test.cc  timer_inc_test.cc  timestamp_inc_test.cc  uuid_inc_test.cc  version_inc_test.cc
yogi-dotnet/: conanfile.py  yogi-dotnet.sln
yogi-dotnet/test/: BranchTest.cs  Common.cs  ConfigurationTest.cs  ConstantsTest.cs  ContextTest.cs  DurationTest.cs  EnumsTest.cs  ErrorsTest.cs  JsonViewTest.cs  LoggingTest.cs  MsgpackViewTest.cs  ObjectTest.cs  OperationIdTest.cs  PayloadViewTest.cs  SchemasTest.cs  SignalsTest.cs  TimerTest.cs  TimestampTest.cs  VersionTest.cs  test.csproj
yogi-dotnet/yogi/: Api.cs  Branch.cs  Configuration.cs  Constants.cs  Context.cs  Duration.cs  Enums.cs  Errors.cs  JsonView.cs  Library.cs  Logging.cs  MsgpackView.cs  Object.cs  OperationId.cs  PayloadView.cs  Schemas.cs  Signals.cs  Timer.cs  Timestamp.cs  Version.cs  yogi.csproj
yogi-python/: conanfile.py  requirements.txt
yogi-python/test/: __init__.py  common.py  conftest.py  test_branch.py  test_configuration.py  test_constants.py  test_context.py  test_duration.py  test_enums.py  test_errors.py  test_json_view.py  test_logging.py  test_msgpack_view.py  test_object.py  test_operation_id.py  test_payload_view.py  test_schemas.py  test_signals.py  test_timer.py  test_timestamp.py  test_version.py
yogi-python/yogi/: __init__.py  _branch.py  _configuration.py  _constants.py  _context.py  _duration.py  _enums.py  _errors.py  _handler.py  _json_view.py  _library.py  _logging.py  _msgpack_view.py  (+8 more)
